// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <ForwardRef(Link)
            target="_blank"
            to="http://github.enterprise.com/PROJECT_KEY/settings/hooks"
          >
            onboarding.tutorial.with.jenkins.webhook.github.step1.link
          </ForwardRef(Link)>,
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.github.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/github-webhook/"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "events",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.github.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <strong>
          onboarding.tutorial.with.jenkins.webhook.github.step2.repo
        </strong>
      </li>
      <li>
        <strong>
          onboarding.tutorial.with.jenkins.webhook.github.step2.pr
        </strong>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "add_webhook",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.github.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly: with branches disabled 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <ForwardRef(Link)
            target="_blank"
            to="http://github.enterprise.com/PROJECT_KEY/settings/hooks"
          >
            onboarding.tutorial.with.jenkins.webhook.github.step1.link
          </ForwardRef(Link)>,
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.github.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/job/***JENKINS_JOB_NAME***/build?token=***JENKINS_BUILD_TRIGGER_TOKEN***"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "events",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.github.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <strong>
          onboarding.tutorial.with.jenkins.webhook.github.step2.repo
        </strong>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "add_webhook",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.github.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly: with no alm binding 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <strong>
            onboarding.tutorial.with.jenkins.webhook.github.step1.link
          </strong>,
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.github.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/github-webhook/"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "events",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.github.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <strong>
          onboarding.tutorial.with.jenkins.webhook.github.step2.repo
        </strong>
      </li>
      <li>
        <strong>
          onboarding.tutorial.with.jenkins.webhook.github.step2.pr
        </strong>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "add_webhook",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.github.step3"
    />
  </li>
</Fragment>
`;
